feat: add basic structure, semantic memory, and a couple docs
- Implement dual-memory architecture (conversation JSON + semantic TimescaleDB)
- Add semantic memory with vector search, CRUD operations, and context filtering
- Add complete TimescaleDB schema with pgvector extension (schema/init.sql)
- Add comprehensive README with badges, architecture diagram, and quick start
- Add Hermes model disclaimer to all relevant docs
- Add Polyform Shield License 1.0.0
- Update Makefile with proper uv commands and database setup
- Update unit tests for new architecture with mocked connection pool

Generated-by: Kiro <kiro@users.noreply.github.com>
Signed-off-by: Ashley Childress <6563688+anchildress1@users.noreply.github.com>

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,18 @@
-# OpenAI API Key for embeddings
+# OpenAI API Key for embeddings (REQUIRED)
+# Get from: https://platform.openai.com/api-keys
 OPENAI_API_KEY=sk-...
 
-# Memory database connection (required)
+# TimescaleDB connection for semantic memory (OPTIONAL)
+# If not set, semantic memory features will be unavailable
+# Get from: https://console.timescale.cloud
 MEMORY_DB_URL=postgresql://user:password@host:port/database?sslmode=require
+
+# OpenAI embedding model to use (OPTIONAL)
+# Default: text-embedding-3-small
+# Options: text-embedding-3-small (1536), text-embedding-3-large (3072), text-embedding-ada-002 (1536)
+# OPENAI_EMBEDDING_MODEL=text-embedding-3-small
+
+# OpenAI embedding dimensions (OPTIONAL)
+# Must match the model: text-embedding-3-small=1536, text-embedding-3-large=3072
+# Default: 1536 (auto-detected from model)
+# OPENAI_EMBEDDING_DIM=1536
