--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,10 @@ dev = [
     "pytest>=7.0.0",
     "pytest-mock>=3.12.0",
     "pytest-cov>=4.1.0",
+    "ruff>=0.1.0",
+    "mdformat>=0.7.17",
+    "mdformat-gfm>=0.3.5",
+    "mdformat-frontmatter>=2.0.0",
 ]
 
 [tool.pytest.ini_options]
