--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,11 @@
 # Get from: https://platform.openai.com/api-keys
 OPENAI_API_KEY=sk-...
 
+# Template configuration file path (OPTIONAL)
+# Default: config/template.yaml
+# Set to a private template file if you keep templates out of the repo
+# TEMPLATE_CONFIG=config/template.yaml
+
 # TimescaleDB connection for semantic memory (OPTIONAL)
 # If not set, semantic memory features will be unavailable
 # Get from: https://console.timescale.cloud
