--- a/.gitignore
+++ b/.gitignore
@@ -11,10 +11,6 @@ env/
 .ruff_cache/
 .venv/
 
-# Memory files
-memory.json
-*.memory.json
-
 # Logs
 *.log
 
@@ -39,3 +35,5 @@ Thumbs.db
 
 # Environment
 .env
+config/**/*.yaml
+!config/template.yaml
