test(ci): add comprehensive unit tests and enforce 80% coverage
 - Add focused unit tests for memory and chat helper success/fail flows
 - Enforce coverage threshold (--cov-fail-under=80) via pyproject.toml
 - Exclude interactive `chat_loop` from coverage via .coveragerc and pragma
 - Add multiple test modules and update docs/config to support CI

Generated-by: GitHub Copilot <github.copilot@github.com>
Signed-off-by: Ashley Childress <6563688+anchildress1@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ venv/
 ENV/
 env/
 .ruff_cache/
+.pytest_cache/
 .venv/
 
 # Logs
@@ -32,6 +33,11 @@ logs
 # OS
 .DS_Store
 Thumbs.db
+
+# Tests
+.coverage
+htmlcov/
+
 
 # Environment
 .env
