--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,3 +26,4 @@ dev = [
 [tool.pytest.ini_options]
 pythonpath = "."
 testpaths = ["tests"]
+addopts = "--cov=src --cov-report=term-missing --cov-report=html --cov-fail-under=80"
