fix: resolve test failures by standardizing API naming
- Add wrapper functions for memory to chat module for test compatibility
- Refactor MemoryStore to support both 'context' and 'tag' parameters for backward compatibility
- Add list_contexts() method to MemoryStore as wrapper for list_tags()
- Fix OpenAI response mock to include usage attribute in tests
- Update chat_loop to accept both context_file and memory_file parameters
- Correct error message text from "Context" to "Memory" for consistency
- Update DummyStore test fixture to match new MemoryStore API signature

Generated-by: Verdent AI <noreply@verdent.ai>
Signed-off-by: Ashley Childress <6563688+anchildress1@users.noreply.github.com>

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,7 @@ OPENAI_API_KEY=sk-...
 # If not set, semantic memory features will be unavailable
 # Get from: https://console.timescale.cloud
 MEMORY_DB_URL=postgresql://user:password@host:port/database?sslmode=require
+HERMES_APP_PASSWORD=hermes_app_password
 
 # OpenAI embedding model to use (OPTIONAL)
 # Default: text-embedding-3-small
