--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "psycopg2-binary>=2.9.9",
     "openai>=1.0.0",
     "python-dotenv>=1.0.0",
+    "msgspec>=0.18.0",
 ]
 
 [project.optional-dependencies]
@@ -26,4 +27,4 @@ dev = [
 [tool.pytest.ini_options]
 pythonpath = "."
 testpaths = ["tests"]
-addopts = "--cov=src --cov-report=term-missing --cov-report=html --cov-fail-under=80"
+addopts = "-v"
