--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ dev = [
     "mdformat>=0.7.17",
     "mdformat-gfm>=0.3.5",
     "mdformat-frontmatter>=2.0.0",
+    "lefthook>=1.9.4",
+    "gitlint-rai>=0.0.0",
 ]
 
 [tool.pytest.ini_options]
