refactor: use Pydantic for configuration management
- Replace dict-based config with Pydantic AgentConfig model

- Update ChatSession and main.py to use object access

- Add strong typing to config loading and validation

- Cleanup accidental duplicate documentation file

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ dependencies = [
     "openai>=1.0.0",
     "python-dotenv>=1.0.0",
     "msgspec>=0.18.0",
+    "pydantic>=2.12.5",
+    "pydantic-settings>=2.12.0",
 ]
 
 [project.optional-dependencies]
